--- a/manifests/K8sfile.yml
+++ b/manifests/K8sfile.yml
@@ -6,7 +6,7 @@ metadata:
   name: cocreate
   namespace: default
 spec:
-  replicas: 1
+  # replicas: 1
   selector:
     matchLabels:
       app: cocreate
