--- a/manifests/K8sfile.yml
+++ b/manifests/K8sfile.yml
@@ -10,10 +10,10 @@ spec:
   selector:
     matchLabels:
       app: cocreate
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+  # strategy:
+  #   rollingUpdate:
+  #     maxSurge: 25%
+  #     maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
