--- a/manifests/K8sfile.yml
+++ b/manifests/K8sfile.yml
@@ -55,7 +55,7 @@ spec:
     app: cocreate
     
   sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
@@ -72,7 +72,7 @@ spec:
     app: cocreate
     
   sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
