--- a/manifests/K8sfile.yml
+++ b/manifests/K8sfile.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: Deployment
 metadata:
   labels:
     app: cocreate
   name: cocreate
   namespace: default
 spec:
-  # replicas: 3
+  replicas: 3
   selector:
     matchLabels:
       app: cocreate
-  # strategy:
-  #   rollingUpdate:
-  #     maxSurge: 25%
-  #     maxUnavailable: 25%
-  #   type: RollingUpdate
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -108,3 +108,4 @@ metadata:
   name: cocreate-crdt-conf
 data:
   PORT: "3000"
+  
